fixed mobile view navbar spacing, updated resume

--- a/Travis-Coding/src/app/shared/templates/navbar/navbar.component.css
+++ b/Travis-Coding/src/app/shared/templates/navbar/navbar.component.css
@@ -31,28 +31,35 @@ li {
 
   .navbar-wrapper {
     display: flex;
-    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    padding: 1em 1em;
+    padding: 1em;
     max-width: 100%;
+    background-color: #161b22;
   }
-  
+
   .navbar-wrapper h1 {
     display: none;
   }
-  
+
   ul {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    padding: 0;
+    margin: 0;
   }
-  
+
   li {
-    font-size: 1.25em;
-    margin-bottom: 0.5em;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0; 
+    padding: 0 0.5em;   
   }
- 
+
+  a {
+    text-align: center;
+  }
 }
